# ros_control_boilerplate

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
msg/: scorbot_joint_cmd.msg  scorbot_joint_states.msg
scorbot_control/: CMakeLists.txt  package.xml
scorbot_control/config/: scorbot_controllers.yaml
scorbot_control/include/scorbot_control/: scorbot_hw_interface.h
scorbot_control/launch/: scorbot_hardware.launch  scorbot_simulation.launch  scorbot_test_trajectory.launch  scorbot_visualize.launch
scorbot_control/src/: scorbot_hw_interface.cpp  scorbot_hw_main.cpp
scorbot_description/: scorbot.urdf
scorbot_description/meshes/: base.stl  body.stl  fore_arm.stl  gripper_left.stl  gripper_right.stl  upper_arm.stl  wrist_x.stl  wrist_z.stl
src/: communication_test.cpp  generic_hw_interface.cpp
src/tools/: keyboard_teleop.cpp
srv/: read_joint_states.srv  write_joint_cmd.srv
